[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/default.theme" type="Theme" id=1]
[ext_resource path="res://src/map/DialogueBox.gd" type="Script" id=2]
[ext_resource path="res://src/dialogue/DialoguePlayer.tscn" type="PackedScene" id=3]

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -364.0
margin_top = -601.0
margin_right = -113.0
margin_bottom = -258.0

[node name="Panel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -280.0

[node name="Colums" type="HBoxContainer" parent="Panel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Name" type="Label" parent="Panel/Colums"]
margin_right = 69.0
margin_bottom = 240.0
size_flags_vertical = 5
text = "Name"

[node name="Text" type="Label" parent="Panel/Colums"]
margin_left = 85.0
margin_right = 1684.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Dialogue Text"
align = 1
valign = 1

[node name="ButtonNext" type="Button" parent="Panel/Colums"]
margin_left = 1700.0
margin_right = 1880.0
margin_bottom = 80.0
rect_min_size = Vector2( 180, 80 )
size_flags_vertical = 0
text = "Next"

[node name="ButtonFinished" type="Button" parent="Panel/Colums"]
visible = false
margin_left = 1700.0
margin_right = 1880.0
margin_bottom = 80.0
rect_min_size = Vector2( 180, 80 )
size_flags_vertical = 0
text = "Done"

[node name="DialoguePlayer" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="Panel/Colums/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="Panel/Colums/ButtonFinished" to="." method="_on_ButtonFinished_pressed"]
[connection signal="finished" from="DialoguePlayer" to="." method="_on_DialoguePlayer_finished"]
